--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 :root {
 	box-sizing: border-box;
 	--left-width: 56vh;
+	background-color: rgba(197, 134, 99, 0.7)
 }
 .page {
 	display: flex;
-	background-color: rgba(197, 134, 99, 1);
 }
 
 .left { 
@@ -61,7 +61,6 @@ label {
 	display: flex;
 	align-items: center;
 	height: 30vh;
-	background-color: rgba(197, 134, 99, 1);
 	padding-left: 30px;
 	word-wrap: break-word;
 	padding-right: 200px;
